# autotools-examples

./: .gitignore  README
01-first/: README  makefile.am
02-subdirs-fortran/: README  configure.ac
03-custom-functions/: README  acinclude.m4  configure.ac
03-custom-functions/src/: blob.F90  makefile.am
04-custom-functions/: configure.ac
04-custom-functions/m4/: myfunctions1.m4  myfunctions2.m4
05-conftest/: README  configure.ac
05-conftest/m4/: myfunctions3.m4
06-with-package/: README  configure.ac
06-with-package/config/m4/: alice.m4  myfunctions1.m4
07-check-lib/: README  configure.ac  makefile.am
10-library-linking/: README
10-library-linking/alice/: configure.ac
10-library-linking/alice/m4/: myfunctions.m4
10-library-linking/alice/src/: makefile.am
10-library-linking/wonderland/: configure.ac
10-library-linking/wonderland/src/: mad_hatter.F90  wonderland_test.F90
11-recursive/: README  configure.ac  makefile.am
11-recursive/alice/: AUTHORS  README  makefile.am
11-recursive/alice/m4/: wonderland.m4
11-recursive/alice/src/: alice.F90  makefile.am
11-recursive/wonderland/: README
11-recursive/wonderland/m4/: myfunctions.m4
11-recursive/wonderland/src/: makefile.am  wonderland.F90
